--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 	<head>
-	  <meta charset="UTF-8" />
 
-	  <title>Loralee Starla Gentry | Home</title>
+	 	<meta charset="UTF-8" />
+
+	  	<title>Loralee Starla Gentry | Home</title>
 	 
-		<link rel="icon" href="favicon.ico">	
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="css/grid.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
@@ -15,35 +16,55 @@
 		
 	</head>
 	
-	<body class="gradient">
-		<h1>Loralee Starla Gentry</h1>
+	<body>
+		<header >
+			<h1 class="grid_12">Loralee Starla Gentry</h1>
+			<div class="clear"></div>
+			<h2 class="grid_12">Interdisciplinary Studies: Digital Media Design and Production</h2>
+		</header>
 
-			<h2>Interdisciplinary Studies: Digital Media Design and Production</h2>
+		<div class="clear"></div>
 
-				<h3>Bio</h3>
+		<nav>
+			<ul>
+				<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
+				<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
+				<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
+				<li><a href="https://github.com/LLstarla">Github</a></li>
+				<li><a href="https://www.fanfiction.net/%7Estarla26">Fanfiction</a></li>
+				<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
+				<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
+			</ul>
+		</nav>
 
-					<p>I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.</p>
+		<section class="ONE">
+			<img src="img/LL.jpg">
+		</section>
 
-				<h3>Links</h3>
+		<section class="TWO">
+			<h3>Biography</h3>
+				<p>
+					I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.
+				</p>
+		</section>
 
-					<ul>
-						<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
-						<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
-						<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
-						<li><a href="https://github.com/LLstarla">Github</a></li>
-						<li><a href="https://www.fanfiction.net/%7Estarla26">Fanfiction</a></li>
-						<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
-						<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
-					</ul>
+		<section class="THREE">
+		</section>
 
-				<h3>Embeds</h3>
+		<section class="FOUR">
+		</section>
+
+		<footer>
+		</footer>	
+	</body>
+</html>
+
+		
+
+				<!-- <h3>Embeds</h3>
 
 					<p>fav songs from youtube or sound cloud
 					google maps of places I’ve visited</p>
 
-					<p>I love to travel and have had the wonderful opportunity to go many places around the world with my family.  Have a look!</p>
-
-	</body>
-</html>
-
+					<p>I love to travel and have had the wonderful opportunity to go many places around the world with my family.  Have a look!</p> -->
 
