--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 	</head>
 	
 	<body>
-		<header >
-			<h1 class="grid_12">Loralee Starla Gentry</h1>
-			<div class="clear"></div>
-			<h2 class="grid_12">Interdisciplinary Studies: Digital Media Design and Production</h2>
+		<header cladd="grid_12">
+			<h1>Loralee Starla Gentry</h1>
+				<h2>Interdisciplinary Studies: Digital Media Design and Production</h2>
 		</header>
 
 		<div class="clear"></div>
 
 		<nav>
 			<ul>
-				<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
-				<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
-				<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
-				<li><a href="https://github.com/LLstarla">Github</a></li>
-				<li><a href="https://www.fanfiction.net/%7Estarla26">Fanfiction</a></li>
-				<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
-				<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
+				<li class="grid_2 alpha"><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
+				<li class="grid_2"><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
+				<li class="grid_2"><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
+				<li class="grid_2"><a href="https://github.com/LLstarla">Github</a></li>
+				<li class="grid_2"><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
+				<li class="grid_2 omega"><a href="http://rainycafe.com">Rainy Cafe</a></li>
 			</ul>
 		</nav>
+
+		<div class="clear"></div>
 
 		<section class="ONE">
 			<img src="img/LL.jpg">
