--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 	</head>
 	
 	<body>
-		<header cladd="grid_12">
+		<header>
 			<h1>Loralee Starla Gentry</h1>
 				<h2>Interdisciplinary Studies: Digital Media Design and Production</h2>
+
+				<nav>
+			<ul>
+				<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
+				<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
+				<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
+				<li><a href="https://github.com/LLstarla">Github</a></li>
+				<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
+				<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
+			</ul>
+		</nav>
 		</header>
 
 		<div class="clear"></div>
 
-		<nav>
-			<ul>
-				<li class="grid_2 alpha"><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
-				<li class="grid_2"><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
-				<li class="grid_2"><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
-				<li class="grid_2"><a href="https://github.com/LLstarla">Github</a></li>
-				<li class="grid_2"><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
-				<li class="grid_2 omega"><a href="http://rainycafe.com">Rainy Cafe</a></li>
-			</ul>
-		</nav>
+		
 
 		<div class="clear"></div>
 
