--- a/index.html
+++ b/index.html
@@ -21,42 +21,35 @@
 			<h1>Loralee Starla Gentry</h1>
 				<h2>Interdisciplinary Studies: Digital Media Design and Production</h2>
 
-				<nav>
-			<ul>
-				<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
-				<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
-				<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
-				<li><a href="https://github.com/LLstarla">Github</a></li>
-				<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
-				<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
-			</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="https://twitter.com/LoraleeStarla">Twitter</a></li>
+					<li><a href="https://www.facebook.com/loraleestarla">Facebook</a></li>
+					<li><a href="https://www.tumblr.com/blog/star-la-lune-films">Tumblr</a></li>
+					<li><a href="https://github.com/LLstarla">Github</a></li>
+					<li><a href="http://www.pinterest.com/starla26/design-and-crafts/">Pinterest</a></li>
+					<li><a href="http://rainycafe.com">Rainy Cafe</a></li>
+				</ul>
+			</nav>
 		</header>
 
 		<div class="clear"></div>
 
-		
+		<section class="grid_8 alpha">
+			
+			<p id="bio">
+				I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.
+			</p>
+		</section>
+
+		<section class="grid_4 omega">
+			<img src="img/LL.jpg" alt="Picture of Loralee Starla Gentry" id="picture">
+		</section>
 
 		<div class="clear"></div>
 
-		<section class="ONE">
-			<img src="img/LL.jpg">
-		</section>
-
-		<section class="TWO">
-			<h3>Biography</h3>
-				<p>
-					I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.
-				</p>
-		</section>
-
-		<section class="THREE">
-		</section>
-
-		<section class="FOUR">
-		</section>
-
-		<footer>
+		<footer class="grid_12">
+			<p>&copy; 2014 Loralee Starla Gentry</p>
 		</footer>	
 	</body>
 </html>
