--- a/index.html
+++ b/index.html
@@ -33,24 +33,34 @@
 			</nav>
 		</header>
 
-		<div class="clear"></div>
+	<div class="clear"></div>
 
-		<section class="grid_8 alpha">
+	<div class="grid_8 alpha">
+		
+		<section id="bio">
 			
-			<p id="bio">
+			<p>
 				I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.
 			</p>
+
 		</section>
+
+	</div>
 
 		<section class="grid_4 omega">
+
 			<img src="img/LL.jpg" alt="Picture of Loralee Starla Gentry" id="picture">
+
 		</section>
 
-		<div class="clear"></div>
+	<div class="clear"></div>
 
-		<footer class="grid_12">
+		<footer class="grid_12" id="foot">
+
 			<p>&copy; 2014 Loralee Starla Gentry</p>
+
 		</footer>	
+
 	</body>
 </html>
 
