--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="css/grid.css" media="screen">
 		<link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Advent+Pro:700,400,600,500' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Laila:700,300,400,600,500' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 		
@@ -36,7 +39,7 @@
 	<div class="clear"></div>
 
 	<div class="grid_8 alpha">
-		
+
 		<section id="bio">
 			
 			<p>
