--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
 		<section id="bio">
 			
-			<p>
-				I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.  Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.  Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art in hopes of going into the field of digital media design and production upon graduation in the spring of 2015.
+			<p id="pone">I have quite the eclectic educational background.  In 2008 I started out my collegiate career at California Polytechnic State University: San Luis Obispo studying Aerospace Engineering.</p>
+			<p id="ptwo">Although engineering was intriguing, my artistic side suffered greatly, so I went on to earn my Associate of Arts from Seattle Central Community College while I focused on finding my new educational path.</p>
+			<p id="pthree">Finally I enrolled at Eastern Washington University and completed the junior level of the Film program.  Now I am in my senior year at EWU studying Film, Design, and Art, headed for the field of digital media design and production upon graduation in the spring of 2015.
 			</p>
 
 		</section>
@@ -58,21 +59,24 @@
 
 	<div class="clear"></div>
 
-		<footer class="grid_12" id="foot">
+		<section class="grid_12" id="vids">
+			<h3>My Gallery</h3>
+			<div class="grid_6 alpha">
+				<iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=http%3A%2F%2Fwww.tumblr.com%2Fvideo%2Fstar-la-lune-films%2F69442446928%2F400&url=http%3A%2F%2Fstar-la-lune-films.tumblr.com%2Fpost%2F69442446928%2Fau-revoir-a-film-by-loralee-starla-gentry&image=http%3A%2F%2Fmedia.tumblr.com%2Ftumblr_mxipc2Sq7G1t0fplz_frame1.jpg&key=2692979e4a2445999460cef6fe0e69cd&type=text%2Fhtml&schema=tumblr" width="auto" height="100%" scrolling="no" frameborder="0" allowfullscreen></iframe>
+			</div>
 
-			<p>&copy; 2014 Loralee Starla Gentry</p>
+			<div class="grid_6 omega">
+				<iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=http%3A%2F%2Fwww.tumblr.com%2Fvideo%2Fstar-la-lune-films%2F100766811091%2F400&url=http%3A%2F%2Fstar-la-lune-films.tumblr.com%2Fpost%2F100766811091&image=http%3A%2F%2Fmedia.tumblr.com%2Ftumblr_ndwvq1ffNG1t0fplz_frame1.jpg&key=2692979e4a2445999460cef6fe0e69cd&type=text%2Fhtml&schema=tumblr" width="auto" height="100%" scrolling="no" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</section>
+
+		<div class="clear"></div>
+
+		<footer class="grid_12 alpha">
+
+			<p  id="foot">&copy; 2014 Loralee Starla Gentry</p>
 
 		</footer>	
 
 	</body>
 </html>
-
-		
-
-				<!-- <h3>Embeds</h3>
-
-					<p>fav songs from youtube or sound cloud
-					google maps of places I’ve visited</p>
-
-					<p>I love to travel and have had the wonderful opportunity to go many places around the world with my family.  Have a look!</p> -->
-
