FINAL YAY (for now)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 	<div class="clear"></div>
 
+	
+	<div class="grid_12 poodle">
 	<div class="grid_8 alpha">
 
 		<section id="bio">
@@ -78,5 +80,6 @@
 
 		</footer>	
 
+</div>
 	</body>
 </html>
